[package]
name = "my-redis"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"